2019-07-09  Yannick Moy  <moy@adacore.com>

	* exp_spark.adb (Expand_SPARK_N_Attribute_Reference): Expand
	attribute reference on Enum_Rep.

2019-07-09  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch12.adb (Instantiate_Formal_Package): Handle properly the
	case where the actual for a formal package in an instance is the
	current instance of an enclosing generic package.
	(Check_Formal_Packages): If the formal package declaration is
	box-initialized or lacks associations altogether, no internal
	instance was created to verify conformance, and there is no
	validating package to remove from tree.

2019-07-09  Yannick Moy  <moy@adacore.com>

	* freeze.adb (Build_Renamed_Body): Do not set body to inline in
	GNATprove mode.

2019-07-09  Yannick Moy  <moy@adacore.com>

	* exp_util.adb (Expand_Subtype_From_Expr): Still expand the type
	of static expressions in GNATprove_Mode.
	* sem_ch3.adb (Analyze_Object_Declaration): Remove obsolete
	special case for GNATprove_Mode.

2019-07-09  Piotr Trojanek  <trojanek@adacore.com>

	* doc/gnat_rm/the_gnat_library.rst,
	doc/gnat_ugn/building_executable_programs_with_gnat.rst,
	erroutc.adb, libgnat/g-comlin.adb, libgnat/g-comlin.ads,
	libgnat/g-regexp.ads, libgnat/g-regpat.ads,
	libgnat/g-spipat.ads, libgnat/s-os_lib.ads,
	libgnat/s-regexp.ads: Reword "wild card" to "wildcard".
	* gnat_rm.texi, gnat_ugn.texi: Regenerate.

2019-07-09  Yannick Moy  <moy@adacore.com>

	* sem_spark.adb (Check_Expression): Handle correctly implicit
	assignments as part of allocators and (extension) aggregates.
	(Get_Root_Object): Adapt for new path expressions.
	(Is_Path_Expression): Return True for (extension) aggregate.

2019-07-09  Piotr Trojanek  <trojanek@adacore.com>

	* einfo.ads: Fix a typo.

2019-07-09  Ed Schonberg  <schonberg@adacore.com>

	* sem_util.adb (Scope_Within_Or_Same): Handle properly task
	bodies and protected bodies, so that local variables within have
	their proper scopes after these constructs have been rewritten